--- a/index.html
+++ b/index.html
@@ -1,17 +1,26 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta name="keywords" content="Ed Park, Portfolio, Web development, Rochester, New York, Full-stack development, Software engineering, Application development, Website design">
-        <meta name="description" content="Welcome to my Rochester-based web development portfolio! I'm Ed, a passionate web developer focused on constructing and enhancing websites for businesses seeking a strong digital presence. Explore my projects that blend creativity and technical expertise to make an impact in the Rochester area.">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="keywords"
+      content="Christopher H, Portfolio, Web development, Rochester, New York, Full-stack development, Software engineering, Application development, Website design"
+    />
+    <meta
+      name="description"
+      content="Welcome to my Rochester-based web development portfolio! I'm Cristopher, a passionate web developer focused on constructing and enhancing websites for businesses seeking a strong digital presence. Explore my projects that blend creativity and technical expertise to make an impact in the Rochester area."
+    />
 
-        <title>Ed Park</title>
-        <link rel="icon" type="image/svg+xml" href="./Ed-Park-Favicon.svg" />
-        <link rel="apple-touch-icon" href="./Ed-Park-Favicon.svg" />
-    </head>
-    <body>
-        <div id="root"></div>
-        <script type="module" src="/src/main.jsx"></script>
-    </body>
+    <title>Christopher H</title>
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="./public/assets/images/logo.jpg"
+    />
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
 </html>
